# my-school-hub

./: .codex  .codex.updated  .env.production  .gitignore  .replit  .~lock.teacher_templates.xls#  BACKEND_API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  Host.md  QUEUE_STRATEGY.md  README.md  USER_GUIDE.html  USER_GUIDE.md  clear-ec2.md  db.py  deploy-ec2.sh  differences.md  docker-compose.prod.yml  docker-compose.yml  estimate_costs.md  go+django branch needed fixes.md  goinfo.md  index.html  logs.md  ok.jsx  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  system.md  teacher_templates.xls  tsconfig.json  update.md  vite.config.js
School_system/: .dockerignore  .env.example  Dockerfile  db.sqlite3  email_service.py  entrypoint.sh  requirements.txt
attached_assets/: Pasted-Internal-Server-Error-api-academics-students-Traceback-_1770029115713.txt  Pasted-Internal-Server-Error-api-academics-teachers-Traceback-_1769424016278.txt  Pasted-Internal-Server-Error-api-academics-teachers-Traceback-_1769424201855.txt  Pasted-Internal-Server-Error-api-academics-teachers-Traceback-_1769424295887.txt  Pasted-Internal-Server-Error-api-academics-teachers-Traceback-_1769424355055.txt  Pasted-Internal-Server-Error-api-academics-teachers-Traceback-_1769424499426.txt  Pasted-Internal-Server-Error-api-finances-school-fees-Tracebac_1769425338706.txt  Pasted-pi-academics-teachers-Traceback-most-recent-call-last-F_1769424438252.txt
go-gateway/: Dockerfile  audit.go  auth.go  auth_test.go  coverage.out  db.go  go.mod  main.go  routing_test.go
(+407 files in other folders)
